Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.58:
	* Bulgarian translation added (Thanks, Igel Itzo)
	* Taiwanese translation added (Thanks, Paladin Liu)
	* Better applet transparency

version 0.57 (04/25/2002):
	* New authorization method for Yahoo!
	* Polish translation updated (Thanks Przemyslaw Sulek)
	* Jabber will tell you when your buddies signed on (Thanks
	  Nathan Walp)
	* Danish translation added (Thanks, Sarauw Hansen)
	* Finnish translation update (Thanks, Tero Kuusela)
	* Japanese translation added (Thanks, Ryosuke Kutsuna)
	* Jabber improvements (Thanks, Nathan Walp)
	* More keyboard shortcuts
	* event_chat_recv takes char**'s, and event_im_recv takes
	  a *guint32 for flags
	* Secure hotmail login for MSN (thanks for the tips,
	  Scott Werndorfer)

version 0.56 (04/11/2002):
	* German translation update (Thanks Karsten Weiss)
	* Shell-like send history binded to Ctrl-Up and Ctrl-Down
	* Russian Translation Updated (thanks Grigory Bakunov)
	* libjabber upgraded to most recent stable version
	* Buddylist looks a little better
	* Fixed MSN privacy settings
	* Group deletion fix (Thanks Mark Doliner)
	* Alias/Group syncronization for Jabber (Thanks JSeymour)
 	* Fixed broken signal handling in gdm-started GNOME sessions 
	  (Thanks Jim Seymour, Vann, Robert McQueen)
	* Oscar group syncronization (Thanks, Mark Doliner)
	* ICQ Authorization via Oscar (Thanks, Mark Doliner)

version 0.55 (03/29/2002):
	* Jabber improvements (Thanks Jim Seymour)
	* Various sound cleanups (Thanks Robert McQueen)
	* Login process shown in single window (Thanks Michael 
	  Golden)
	* Can reorder your accounts in the account editor (Thanks
	  Luke Schierer)
	* Updated Dutch translation
	* Shows "mobile" icon for Oscar buddies using mobile
	  devices (Thanks Mark Doliner)
	* Updated Polish Translation (Thanks Przemyslaw Sulek)
	* Fixed bug in MSN smilies that crashed PPC (and other?) platforms
	* Updated Spanish Translation (Thanks Amaya)